--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
             border-radius: 5px;
         }
     </style>
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7DMEBM7DQJ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7DMEBM7DQJ');
+    </script>
 </head>
 <body>
     <h1>Bienvenue sur ma Landing Page !</h1>
